--- a/point_cloud_object_color_detector/CMakeLists.txt
+++ b/point_cloud_object_color_detector/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(object_color_detector)
+project(point_cloud_object_color_detector)
 
 find_package(catkin REQUIRED COMPONENTS
-  darknet_ros_msgs
-  geometry_msgs
-  object_detector_msgs
-  pcl_ros
-  roscpp
-  rospy
-  sensor_msgs
-  std_msgs
-  cv_bridge
-  image_transport
+    cv_bridge
+    darknet_ros_msgs
+    dynamic_reconfigure
+    geometry_msgs
+    image_transport
+    object_color_detector_params
+    object_detector_msgs
+    pcl_ros
+    roscpp
+    rospy
+    sensor_msgs
+    std_msgs
 )
 
 # OpenCV
@@ -31,7 +33,6 @@ find_package(PCL REQUIRED)
 
 catkin_package(
     INCLUDE_DIRS include
-    LIBRARIES ${PROJECT_NAME}
     ${OpenCV_INCLUDE_DIRS}
     ${PCL_INCLUDE_DIRS}
 )
@@ -43,22 +44,12 @@ include_directories(
     ${PCL_INCLUDE_DIRS}
 )
 
-# object_color_detector_node
-add_executable(object_color_detector_node
-    src/object_color_detector.cpp
-    src/object_color_detector_node.cpp
+# point_cloud_object_color_detector_node
+add_executable(point_cloud_object_color_detector_node
+    src/point_cloud_object_color_detector.cpp
+    src/point_cloud_object_color_detector_node.cpp
 )
-target_link_libraries(object_color_detector_node
+target_link_libraries(point_cloud_object_color_detector_node
     ${catkin_LIBRARIES}
     ${PCL_LIBRARIES}
-)
-
-# mask_image_creator
-add_executable(mask_image_creator_node
-    src/mask_image_creator.cpp
-    src/mask_image_creator_node.cpp
-)
-target_link_libraries(mask_image_creator_node
-    ${catkin_LIBRARIES}
-    ${OpenCV_LIBRARIES}
 )
