--- a/color_dynamic_reconfigure/CMakeLists.txt
+++ b/color_dynamic_reconfigure/CMakeLists.txt
@@ -1,15 +1,12 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(object_color_detector_params)
+project(color_dynamic_reconfigure)
 
 find_package(catkin REQUIRED COMPONENTS
     dynamic_reconfigure
+    object_color_detector_params
     roscpp
     rospy
     std_msgs
-)
-
-generate_dynamic_reconfigure_options(
-    cfg/Hsv.cfg
 )
 
 catkin_package(
