--- a/object_color_detector_params/cfg/Hsv.cfg
+++ b/object_color_detector_params/cfg/Hsv.cfg
@@ -1,3 +1,57 @@
 #!/usr/bin/env python3
 
+PACKAGE = "object_color_detector_params"
 
+from dynamic_reconfigure.parameter_generator_catkin import *
+
+gen = ParameterGenerator()
+
+# RED
+gen.add("LOWER_RED_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_RED_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_RED_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_RED_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_RED_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_RED_V", int_t, 0, "discription", 0, 0, 255)
+
+# GREEN
+gen.add("LOWER_GREEN_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_GREEN_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_GREEN_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_GREEN_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_GREEN_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_GREEN_V", int_t, 0, "discription", 0, 0, 255)
+
+# BLUE
+gen.add("LOWER_BLUE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_BLUE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_BLUE_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_BLUE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_BLUE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_BLUE_V", int_t, 0, "discription", 0, 0, 255)
+
+# YELLOW
+gen.add("LOWER_YELLOW_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_YELLOW_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_YELLOW_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_YELLOW_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_YELLOW_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_YELLOW_V", int_t, 0, "discription", 0, 0, 255)
+
+# ORANGE
+gen.add("LOWER_ORANGE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_ORANGE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_ORANGE_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_ORANGE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_ORANGE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_ORANGE_V", int_t, 0, "discription", 0, 0, 255)
+
+# PURPLE
+gen.add("LOWER_PURPLE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("LOWER_PURPLE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("LOWER_PURPLE_V", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_PURPLE_H", int_t, 0, "discription", 0, 0, 180)
+gen.add("UPPER_PURPLE_S", int_t, 0, "discription", 0, 0, 255)
+gen.add("UPPER_PURPLE_V", int_t, 0, "discription", 0, 0, 255)
+
+exit(gen.generate(PACKAGE, "object_color_detector_params", "Hsv"))
